fix(remove-springboot-preview): Remove springboot preview flag (#68)
Co-authored-by: Broknloop <broknloop@gmail.com>